<package>
  <name>actuator_2dof_gazebo</name>
  <version>0.1.0</version>
  <description>actuator_2dof_gazebo</description>
  <maintainer email="andrewkeefe@brandeis.edu">Andrew Keefe</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rrbot_control</run_depend>
  <run_depend>rrbot_description</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
